# poe-experiments

./: .env.development  .gitignore  README.md  migrations.json  nx.json  package.json
apps/poe-web/: .eslintrc.json  jest.config.ts  project.json  tailwind.config.js
apps/poe-web-e2e/: project.json
apps/poe-web-e2e/src/e2e/: app.cy.ts
apps/poe-web/pages/: _app.tsx  index.tsx
apps/pyapp/: .coverage  README.md  project.json  pyproject.toml
apps/pyapp/pyapp/: __init__.py  index.py
apps/pyapp/tests/: test_index.py
reports/apps/pyapp/unittests/: junit.xml
reports/apps/pyapp/unittests/html/: index.html
