[tool.coverage.run]
branch = true
source = [ "pyapp" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'../../coverage/apps/pyapp/html' --cov-report xml:'../../coverage/apps/pyapp/coverage.xml' --junitxml='../../reports/apps/pyapp/unittests/junit.xml' --html='../../reports/apps/pyapp/unittests/html/index.html'"

[tool.poetry]
name = "pyapp"
version = "1.0.0"
description = "Python App"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "pyapp"

  [tool.poetry.dependencies]
  python = ">=3.8.11,<3.11"
  pytest = "^7.2.2"
  pytest-cov = "^4.0.0"
  pytest-html = "^3.2.0"
  flake8 = "^6.0.0"

  

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
